<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_manager</name>
  <version>0.0.0</version>
  <description>ROS Package for Visual Pose-Graph Estimation</description>
  <maintainer email="sharwinpatil2025@u.northwestern.edu">Sharwin Patil</maintainer>
  <maintainer email="sayantanibhattacharya2025@u.northwestern.edu">Sayantani Bhattacharya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>libg2o</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
